fix text spacing on mobile

--- a/app/javascript/src/stylesheets/pages/supervisors.scss
+++ b/app/javascript/src/stylesheets/pages/supervisors.scss
@@ -45,7 +45,7 @@ $indicator_positive_color: #4caf50;
     }
 
     span {
-      padding: .5em;
+      padding: .5em 1em;
       flex-grow: 1;
     }
   }
